<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.4.7</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>jp.co.stnet</groupId>
	<artifactId>cms</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>cms</name>
	<description>CMSアプリケーション(SpringBootバージョン)</description>
	<properties>
		<java.version>11</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-batch</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jdbc</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.mybatis.spring.boot</groupId>
			<artifactId>mybatis-spring-boot-starter</artifactId>
			<version>2.1.4</version>
		</dependency>
		<dependency>
			<groupId>org.thymeleaf.extras</groupId>
			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
		</dependency>

		<!-- Spring Data Jpa(Hibernate)が正しく動かなる-->
		<!-- See https://stackoverflow.com/questions/48217195/caused-by-org-hibernate-property-access-spi-propertyaccessexception-error-acce -->
		<!-- See https://www.debugcn.com/en/article/5611249.html -->
<!--		<dependency>-->
<!--			<groupId>org.springframework.boot</groupId>-->
<!--			<artifactId>spring-boot-devtools</artifactId>-->
<!--			<scope>runtime</scope>-->
<!--			<optional>true</optional>-->
<!--		</dependency>-->
		<dependency>
			<groupId>org.mariadb.jdbc</groupId>
			<artifactId>mariadb-java-client</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.batch</groupId>
			<artifactId>spring-batch-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- 追加dependency -->

		<!-- dozer beanMapper -->
		<dependency>
			<groupId>com.github.dozermapper</groupId>
			<artifactId>dozer-core</artifactId>
			<version>6.5.2</version>
		</dependency>
		<dependency>
			<groupId>com.github.dozermapper</groupId>
			<artifactId>dozer-spring4</artifactId>
			<version>6.5.2</version>
		</dependency>

		<!-- IntelliJ利用時のエラーを回避 -->
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.3.1</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>2.3.4</version>
		</dependency>
		<dependency>
			<groupId>javax.inject</groupId>
			<artifactId>javax.inject</artifactId>
			<version>1</version>
		</dependency>

		<!-- Terasoluna ライブラリ -->
		<dependency>
			<groupId>org.terasoluna.gfw</groupId>
			<artifactId>terasoluna-gfw-common</artifactId>
			<version>5.7.0.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.terasoluna.gfw</groupId>
			<artifactId>terasoluna-gfw-web</artifactId>
			<version>5.7.0.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.terasoluna.gfw</groupId>
			<artifactId>terasoluna-gfw-web-jsp</artifactId>
			<version>5.7.0.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.terasoluna.gfw</groupId>
			<artifactId>terasoluna-gfw-security-web</artifactId>
			<version>5.7.0.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.terasoluna.gfw</groupId>
			<artifactId>terasoluna-gfw-string</artifactId>
			<version>5.7.0.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.terasoluna.gfw</groupId>
			<artifactId>terasoluna-gfw-codepoints</artifactId>
			<version>5.7.0.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.terasoluna.gfw</groupId>
			<artifactId>terasoluna-gfw-validator</artifactId>
			<version>5.7.0.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.terasoluna.gfw.codepoints</groupId>
			<artifactId>terasoluna-gfw-codepoints-jisx0201</artifactId>
			<version>5.6.1.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.terasoluna.gfw.codepoints</groupId>
			<artifactId>terasoluna-gfw-codepoints-jisx0208</artifactId>
			<version>5.6.1.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.terasoluna.gfw.codepoints</groupId>
			<artifactId>terasoluna-gfw-codepoints-jisx0208kanji</artifactId>
			<version>5.6.1.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.terasoluna.gfw</groupId>
			<artifactId>terasoluna-gfw-jodatime</artifactId>
			<version>5.6.1.RELEASE</version>
		</dependency>

		<!-- mybatis test -->
		<dependency>
			<groupId>org.mybatis.spring.boot</groupId>
			<artifactId>mybatis-spring-boot-starter-test</artifactId>
			<version>2.1.4</version>
			<scope>test</scope>
		</dependency>

		<!-- Passy -->
		<dependency>
			<groupId>org.passay</groupId>
			<artifactId>passay</artifactId>
			<version>1.6.0</version>
		</dependency>

		<!-- greenmail -->
		<dependency>
			<groupId>com.icegreen</groupId>
			<artifactId>greenmail</artifactId>
			<version>1.4.1</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>4.1.2</version>
		</dependency>

		<dependency>
			<groupId>org.apache.tika</groupId>
			<artifactId>tika-core</artifactId>
			<version>1.23</version>
		</dependency>
		<dependency>
			<groupId>org.apache.tika</groupId>
			<artifactId>tika-parsers</artifactId>
			<version>1.23</version>
		</dependency>

		<dependency>
			<groupId>org.hibernate.search</groupId>
			<artifactId>hibernate-search-mapper-orm</artifactId>
			<version>6.0.0.Final</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate.search</groupId>
			<artifactId>hibernate-search-backend-lucene</artifactId>
			<version>6.0.0.Final</version>
		</dependency>

		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-core</artifactId>
			<version>8.7.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-analyzers-kuromoji</artifactId>
			<version>8.7.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-highlighter</artifactId>
			<version>8.7.0</version>
		</dependency>

		<dependency>
			<groupId>com.orangesignal</groupId>
			<artifactId>orangesignal-csv</artifactId>
			<version>2.2.1</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>1.9</version>
		</dependency>

        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>RELEASE</version>
            <scope>compile</scope>
        </dependency>

		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.10.2</version>
		</dependency>

		<dependency>
			<groupId>com.googlecode.owasp-java-html-sanitizer</groupId>
			<artifactId>owasp-java-html-sanitizer</artifactId>
			<version>20200713.1</version>
		</dependency>

    </dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
